Modified tomcat startup script.